--- a/src/ImageGallery.Client/Views/Shared/_Layout.cshtml
+++ b/src/ImageGallery.Client/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Gallery" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Gallery" asp-action="AddImage">Add an image</a></li>
-
+                    <li><a asp-area="" asp-controller="Gallery" asp-action="OrderFrame">Let OrderFrame</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li><a asp-area="" asp-controller="Gallery" asp-action="Logout">Let Logout</a></li>
